hw7 add task-1,2,3

--- a/javascript/goit-js-hw-07/index.html
+++ b/javascript/goit-js-hw-07/index.html
@@ -5,45 +5,106 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Home work 7</title>
-        <style type="text/css">
-            .container {
-                padding: 30px 0;
-                text-align: center;
-                text-align: -webkit-center;
-            }
-            input {
-                font-size: 18px;
-                color: #000;
-                background: #fff;
-                padding: 0.7em 1.5em;
-                margin-bottom: 1em;
-                border: 1px solid gray;
-            }
-            input:hover {
-                background: #000;
-                color: #fff;
-            }
-        </style>
+        <link rel="stylesheet" href="./style/main.css" />
     </head>
     <body>
         <div class="container">
             <h2>Домашнее задание модуль 7</h2>
-            <input id="t1" type="button" value="Задание 1" onclick="task1()" />
-            <input id="t2" type="button" value="Задание 2" onclick="task2()" />
-            <input id="t3" type="button" value="Задание 3" onclick="task3()" />
-            <input id="t4" type="button" value="Задание 4" onclick="task4()" />
+            <div>
+                <hr />
+                <ul id="categories">
+                    <li class="item">
+                        <h2>Животные</h2>
+
+                        <ul>
+                            <li>Кот</li>
+                            <li>Хомяк</li>
+                            <li>Лошадь</li>
+                            <li>Попугай</li>
+                        </ul>
+                    </li>
+                    <li class="item">
+                        <h2>Продукты</h2>
+
+                        <ul>
+                            <li>Хлеб</li>
+                            <li>Петрушка</li>
+                            <li>Творог</li>
+                        </ul>
+                    </li>
+                    <li class="item">
+                        <h2>Технологии</h2>
+
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Node</li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <input
+                    id="t1"
+                    type="button"
+                    value="Задание 1"
+                    onclick="task1()"
+                />
+                <hr />
+            </div>
+            <div>
+                <ul id="ingredients"></ul>
+                <input
+                    id="t2"
+                    type="button"
+                    value="Задание 2"
+                    onclick="task2()"
+                />
+                <hr />
+            </div>
+            <div>
+                <ul id="gallery"></ul>
+                <input
+                    id="t3"
+                    type="button"
+                    value="Задание 3"
+                    onclick="task3()"
+                />
+                <hr />
+            </div>
+            <div>
+                <div id="counter">
+                    <button type="button" data-action="decrement">-1</button>
+                    <span id="value">0</span>
+                    <button type="button" data-action="increment">+1</button>
+                </div>
+                <input
+                    id="t4"
+                    type="button"
+                    value="Задание 4"
+                    onclick="task4()"
+                />
+                <hr />
+            </div>
+
             <input id="t5" type="button" value="Задание 5" onclick="task5()" />
             <input id="t6" type="button" value="Задание 6" onclick="task6()" />
             <input id="t7" type="button" value="Задание 7" onclick="task7()" />
             <input id="t8" type="button" value="Задание 8" onclick="task8()" />
         </div>
-        <script src="./js/task-1.js"></script>
-        <script src="./js/task-2.js"></script>
-        <script src="./js/task-3.js"></script>
-        <script src="./js/task-4.js"></script>
-        <script src="./js/task-5.js"></script>
-        <script src="./js/task-6.js"></script>
-        <script src="./js/task-7.js"></script>
-        <script src="./js/task-8.js"></script>
+        <script type="module">
+            import { task1 } from "./js/task-1.js";
+            import { task2 } from "./js/task-2.js";
+            import { task3 } from "./js/task-3.js";
+            import { task4 } from "./js/task-4.js";
+            import { task5 } from "./js/task-5.js";
+
+            t1.onclick = task1;
+            t2.onclick = task2;
+            t3.onclick = task3;
+            t4.onclick = task4;
+            t5.onclick = task5;
+        </script>
     </body>
 </html>
