--- a/javascript/goit-js-hw-07/index.html
+++ b/javascript/goit-js-hw-07/index.html
@@ -83,12 +83,15 @@
                     id="t4"
                     type="button"
                     value="Задание 4"
-                    onclick="task4()"
                 />
                 <hr />
             </div>
-
-            <input id="t5" type="button" value="Задание 5" onclick="task5()" />
+            <div>
+                <input type="text" placeholder="Ваше имя?" id="name-input" />
+                <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+                <input id="t5" type="button" value="Задание 5"/>
+                <hr>
+            </div>
             <input id="t6" type="button" value="Задание 6" onclick="task6()" />
             <input id="t7" type="button" value="Задание 7" onclick="task7()" />
             <input id="t8" type="button" value="Задание 8" onclick="task8()" />
@@ -97,14 +100,16 @@
             import { task1 } from "./js/task-1.js";
             import { task2 } from "./js/task-2.js";
             import { task3 } from "./js/task-3.js";
-            import { task4 } from "./js/task-4.js";
-            import { task5 } from "./js/task-5.js";
+            //import { task4 } from "./js/task-4.js";
+            //import { task5 } from "./js/task-5.js";
 
             t1.onclick = task1;
             t2.onclick = task2;
             t3.onclick = task3;
-            t4.onclick = task4;
-            t5.onclick = task5;
+            //t4.onclick = task4;
+            //t5.onclick = task5;
         </script>
+        <script src="./js/task-4.js" type="module"></script>
+        <script src="./js/task-5.js" type="module"></script>
     </body>
 </html>
