--- a/javascript/goit-js-hw-07/index.html
+++ b/javascript/goit-js-hw-07/index.html
@@ -1,115 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Home work 7</title>
-        <link rel="stylesheet" href="./style/main.css" />
-    </head>
-    <body>
-        <div class="container">
-            <h2>Домашнее задание модуль 7</h2>
-            <div>
-                <hr />
-                <ul id="categories">
-                    <li class="item">
-                        <h2>Животные</h2>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Home work 7</title>
+		<link rel="stylesheet" href="./style/main.css" />
+	</head>
+	<body>
+		<div class="container">
+			<h2>Домашнее задание модуль 7</h2>
+			<!-- Task-1 -->
+			<div>
+				<hr />
+				<span class="headline">Задание 1</span>
+				<ul id="categories">
+					<li class="item">
+						<h2>Животные</h2>
 
-                        <ul>
-                            <li>Кот</li>
-                            <li>Хомяк</li>
-                            <li>Лошадь</li>
-                            <li>Попугай</li>
-                        </ul>
-                    </li>
-                    <li class="item">
-                        <h2>Продукты</h2>
+						<ul>
+							<li>Кот</li>
+							<li>Хомяк</li>
+							<li>Лошадь</li>
+							<li>Попугай</li>
+						</ul>
+					</li>
+					<li class="item">
+						<h2>Продукты</h2>
 
-                        <ul>
-                            <li>Хлеб</li>
-                            <li>Петрушка</li>
-                            <li>Творог</li>
-                        </ul>
-                    </li>
-                    <li class="item">
-                        <h2>Технологии</h2>
+						<ul>
+							<li>Хлеб</li>
+							<li>Петрушка</li>
+							<li>Творог</li>
+						</ul>
+					</li>
+					<li class="item">
+						<h2>Технологии</h2>
 
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
-                            <li>Node</li>
-                        </ul>
-                    </li>
-                </ul>
+						<ul>
+							<li>HTML</li>
+							<li>CSS</li>
+							<li>JavaScript</li>
+							<li>React</li>
+							<li>Node</li>
+						</ul>
+					</li>
+				</ul>
+				<hr />
+			</div>
+			<!-- Task-2 -->
+			<div>
+				<span class="headline">Задание 2</span>
+				<ul id="ingredients"></ul>
+				<hr />
+			</div>
+			<!-- Task-3 -->
+			<div>
+				<span class="headline">Задание 3</span>
+				<ul id="gallery"></ul>
 
-                <input
-                    id="t1"
-                    type="button"
-                    value="Задание 1"
-                    onclick="task1()"
-                />
-                <hr />
-            </div>
-            <div>
-                <ul id="ingredients"></ul>
-                <input
-                    id="t2"
-                    type="button"
-                    value="Задание 2"
-                    onclick="task2()"
-                />
-                <hr />
-            </div>
-            <div>
-                <ul id="gallery"></ul>
-                <input
-                    id="t3"
-                    type="button"
-                    value="Задание 3"
-                    onclick="task3()"
-                />
-                <hr />
-            </div>
-            <div>
-                <div id="counter">
-                    <button type="button" data-action="decrement">-1</button>
-                    <span id="value">0</span>
-                    <button type="button" data-action="increment">+1</button>
-                </div>
-                <input
-                    id="t4"
-                    type="button"
-                    value="Задание 4"
-                />
-                <hr />
-            </div>
-            <div>
-                <input type="text" placeholder="Ваше имя?" id="name-input" />
-                <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
-                <input id="t5" type="button" value="Задание 5"/>
-                <hr>
-            </div>
-            <input id="t6" type="button" value="Задание 6" onclick="task6()" />
-            <input id="t7" type="button" value="Задание 7" onclick="task7()" />
-            <input id="t8" type="button" value="Задание 8" onclick="task8()" />
-        </div>
-        <script type="module">
-            import { task1 } from "./js/task-1.js";
-            import { task2 } from "./js/task-2.js";
-            import { task3 } from "./js/task-3.js";
-            //import { task4 } from "./js/task-4.js";
-            //import { task5 } from "./js/task-5.js";
+				<hr />
+			</div>
+			<!-- Task-4 -->
+			<div>
+				<span class="headline">Задание 4</span>
+				<div id="counter">
+					<button type="button" data-action="decrement">-1</button>
+					<span id="value">0</span>
+					<button type="button" data-action="increment">+1</button>
+				</div>
+				<hr />
+			</div>
+			<!-- Task-5 -->
+			<div>
+				<span class="headline">Задание 5</span>
+				<input type="text" placeholder="Ваше имя?" id="name-input" />
+				<h1>Привет, <span id="name-output">незнакомец</span>!</h1>
 
-            t1.onclick = task1;
-            t2.onclick = task2;
-            t3.onclick = task3;
-            //t4.onclick = task4;
-            //t5.onclick = task5;
-        </script>
-        <script src="./js/task-4.js" type="module"></script>
-        <script src="./js/task-5.js" type="module"></script>
-    </body>
+				<hr />
+			</div>
+			<!-- Task-6 -->
+			<div>
+				<span class="headline">Задание 6</span>
+				<input
+					type="text"
+					id="validation-input"
+					data-length="6"
+					placeholder="Введи 6 символов"
+				/>
+				<hr />
+			</div>
+			<!-- Task-7 -->
+			<div>
+				<span class="headline">Задание 7</span>
+				<input id="font-size-control" type="range" />
+				<br />
+				<span id="text">Абракадабра!</span>
+				<hr />
+			</div>
+			<!-- Task-8 -->
+			<div>
+				<span class="headline">Задание 8</span>
+				<div id="controls">
+					<input type="number" min="0" max="100" step="1" />
+					<button type="button" data-action="render">Создать</button>
+					<button type="button" data-action="destroy">
+						Очистить
+					</button>
+				</div>
+
+				<div id="boxes"></div>
+			</div>
+		</div>
+		<script src="./js/data-base.js" type="module"></script>
+
+		<script src="./js/task-1.js" type="module"></script>
+		<script src="./js/task-2.js" type="module"></script>
+		<script src="./js/task-3.js" type="module"></script>
+		<script src="./js/task-4.js" type="module"></script>
+		<script src="./js/task-5.js" type="module"></script>
+		<script src="./js/task-6.js" type="module"></script>
+		<script src="./js/task-7.js" type="module"></script>
+		<script src="./js/task-8.js" type="module"></script>
+	</body>
 </html>
