--- a/javascript/goit-js-hw-07/index.html
+++ b/javascript/goit-js-hw-07/index.html
@@ -57,7 +57,15 @@
 			<!-- Task-3 -->
 			<div>
 				<span class="headline">Задание 3</span>
-				<ul id="gallery"></ul>
+				<ul id="gallery">
+					<li class="image-item">
+						<img
+							class="image-gallery"
+							src="https://images.pexels.com/photos/213399/pexels-photo-213399.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+							alt=""
+						/>
+					</li>
+				</ul>
 
 				<hr />
 			</div>
