--- a/javascript/goit-js-hw-08/index.html
+++ b/javascript/goit-js-hw-08/index.html
@@ -31,5 +31,6 @@
 
 		<script src="./js/gallery-items.js" type="module"></script>
 		<script src="./js/main.js" type="module"></script>
+		<script src="./js/lazy-load.js" type="module"></script>
 	</body>
 </html>
