Additional tasks edits 4

--- a/Additional tasks/module-7/task-2/index.html
+++ b/Additional tasks/module-7/task-2/index.html
@@ -13,6 +13,11 @@
             <button data-action="search">Поиск</button>
             <button data-action="clear">Очистить</button>
         </div>
+        <hr />
+        <div>
+            <button data-action="on_off">Вкл/Выкл</button>
+            <div id="area" style="background: chartreuse; height: 200px;"></div>
+        </div>
         <script src="./js/main.js"></script>
     </body>
 </html>
