Additional tasks changes-6

--- a/Additional tasks/module-7/task-1/index.html
+++ b/Additional tasks/module-7/task-1/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
-        <link rel="stylesheet" href="./style.css" />
-    </head>
-    <body>
-        <div id="pool">
-            <div id="person">Click me!</div>
-        </div>
-        <script src="./js/main.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Document</title>
+		<link rel="stylesheet" href="./style.css" />
+	</head>
+	<body>
+		<div id="pool">
+			Наведи мышкой
+			<div id="person" hidden="true">Click me!</div>
+		</div>
+		<script src="./js/main.js"></script>
+	</body>
 </html>
