--- a/javascript/goit-js-hw-10/src/index.html
+++ b/javascript/goit-js-hw-10/src/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="dark-theme">
     <div class="toolbar">
       <!-- Разметка переключателя темы -->
       <div class="theme-switch">
