--- a/javascript/goit-js-hw-11/index.html
+++ b/javascript/goit-js-hw-11/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Home work 11</title>
-        <link rel="stylesheet" href="./syle.css" />
-    </head>
-    <body>
-        <p class="bg-timer" id="js-title">Timer stopped</p>
-        <button type="button" data-action="start">Start</button>
-        <button type="button" data-action="stop">Stop</button>
-        <hr />
-        <div class="timer" id="timer-1">
-            <div class="field">
-                <span class="value" data-value="days">11</span>
-                <span class="label">Days</span>
-            </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Home work 11</title>
+		<link rel="stylesheet" href="./syle.css" />
+	</head>
+	<body>
+		<p class="bg-timer" id="js-title">Timer stopped</p>
+		<button type="button" data-action="start">Start</button>
+		<button type="button" data-action="stop">Stop</button>
+		<hr />
+		<button type="button" data-action="task-1">Promis task-1</button>
+		<button type="button" data-action="task-2">Promis task-2</button>
+		<button type="button" data-action="task-3">Promis task-3</button>
+		<hr />
+		<div class="timer" id="timer-1">
+			<div class="field">
+				<span class="value" data-value="days">11</span>
+				<span class="label">Days</span>
+			</div>
 
-            <div class="field">
-                <span class="value" data-value="hours">11</span>
-                <span class="label">Hours</span>
-            </div>
+			<div class="field">
+				<span class="value" data-value="hours">11</span>
+				<span class="label">Hours</span>
+			</div>
 
-            <div class="field">
-                <span class="value" data-value="mins">11</span>
-                <span class="label">Minutes</span>
-            </div>
+			<div class="field">
+				<span class="value" data-value="mins">11</span>
+				<span class="label">Minutes</span>
+			</div>
 
-            <div class="field">
-                <span class="value" data-value="secs">11</span>
-                <span class="label">Seconds</span>
-            </div>
-        </div>
-        <hr />
-        <script src="./js/changeBg.js" type="module"></script>
-        <script src="./js/timer.js" type="module"></script>
-    </body>
+			<div class="field">
+				<span class="value" data-value="secs">11</span>
+				<span class="label">Seconds</span>
+			</div>
+		</div>
+		<hr />
+		<script src="./js/changeBg.js" type="module"></script>
+		<script src="./js/promis_task-1.js" type="module"></script>
+		<script src="./js/promis_task-2.js" type="module"></script>
+		<script src="./js/promis_task-3.js" type="module"></script>
+		<script src="./js/timer.js" type="module"></script>
+	</body>
 </html>
