--- a/Additional tasks/module-13/index.html
+++ b/Additional tasks/module-13/index.html
@@ -10,6 +10,7 @@
         <div></div>
         <div></div>
         <div></div>
-        <script src="./index.js"></script>
+        <!-- <script src="./index.js"></script> -->
+        <script src="./iterator.js"></script>
     </body>
 </html>
