--- a/Additional tasks/module-13/index.html
+++ b/Additional tasks/module-13/index.html
@@ -11,6 +11,7 @@
         <div></div>
         <div></div>
         <!-- <script src="./index.js"></script> -->
-        <script src="./iterator.js"></script>
+        <!-- <script src="./iterator.js"></script> -->
+        <script src="./fetch.js"></script>
     </body>
 </html>
